test/files/neg/t8534.check
t8534.scala:6: error: MyTrait is not an enclosing class
  class BugTest {def isTheBugHere(in: MyTrait.this.type#SomeData) = false}
                                      ^
one error found
